Hyperion: fix event/item type retrieval regression due to socket.io v1.0.0-pre Rheia: fix search widget z-Index Rheia: close popup to choose item/event type by double click

--- a/rheia/style/edition-perspective.styl
+++ b/rheia/style/edition-perspective.styl
@@ -35,6 +35,7 @@ img.dragged
     border-color grey
 
   .loadable
+    user-select none
     border 1px dotted transparent
     display inline-block
     width size
