--- a/rheia/style/widget.styl
+++ b/rheia/style/widget.styl
@@ -268,7 +268,6 @@ a.ui-button:not(.ui-button-icon-only):not(.ui-button-text-icon-secondary):not(.u
 .search
   position relative
   padding-right 30px
-  z-index 5000
 
   .results
     position absolute
